Overlap fix

--- a/style.css
+++ b/style.css
@@ -47,8 +47,3 @@ body {
     font-size: 24px;
     font-weight: 400;
 }
-
-#content {
-    font-size: 18px;
-    font-weight: 400;
-}
